# xx_MagiCam

./: CMakeLists.txt  LICENSE  README.md
src/: FaceDetector.cpp  main.cpp
src/include/: FaceDetector.h  serialsetup.h
